# ChangeLog for dev-python/twisted-conch
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-conch/ChangeLog,v 1.100 2014/05/20 07:02:07 patrick Exp $

*twisted-conch-14.0.0 (20 May 2014)

  20 May 2014; Patrick Lauer <patrick@gentoo.org> +twisted-conch-14.0.0.ebuild:
  Bump

  21 Jan 2014; Patrick Lauer <patrick@gentoo.org> -twisted-conch-10.2.0.ebuild,
  -twisted-conch-11.0.0.ebuild, -twisted-conch-11.1.0.ebuild,
  -twisted-conch-12.0.0.ebuild, -twisted-conch-12.2.0.ebuild:
  Remove old

*twisted-conch-13.2.0 (20 Jan 2014)

  20 Jan 2014; Ian Delaney <idella4@gentoo.org> +twisted-conch-13.2.0.ebuild:
  bump

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> twisted-conch-12.3.0.ebuild:
  Stable for arm, wrt bug #468150

  06 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-conch-12.3.0.ebuild:
  Stable for sparc, wrt bug #468150

  05 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-conch-12.3.0.ebuild:
  Stable for ppc64, wrt bug #468150

  04 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-conch-12.3.0.ebuild:
  Stable for ppc, wrt bug #468150

  03 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-conch-12.3.0.ebuild:
  Stable for ia64, wrt bug #468150

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-conch-12.3.0.ebuild:
  Stable for alpha, wrt bug #468150

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-conch-12.3.0.ebuild:
  Stable for x86, wrt bug #468150

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-conch-12.3.0.ebuild:
  Stable for amd64, wrt bug #468150

  23 Aug 2013; Jeroen Roovers <jer@gentoo.org> twisted-conch-12.3.0.ebuild:
  Stable for HPPA (bug #468150).

  09 Aug 2013; Michał Górny <mgorny@gentoo.org> twisted-conch-13.0.0-r1.ebuild:
  Fix python_prepare_all() call order.

*twisted-conch-13.0.0-r1 (09 Aug 2013)

  09 Aug 2013; Michał Górny <mgorny@gentoo.org> +twisted-conch-13.0.0-r1.ebuild:
  Migrate to twisted-r1.
