@@ -6,6 +6,6 @@ EBUILD twisted-conch-12.3.0.ebuild 969 SHA256 8531747b904f1f6578b745fb38d5e62d0a
 EBUILD twisted-conch-13.0.0-r1.ebuild 911 SHA256 c9af28b2ccc493c3fb4f1a6f223274d0f77d0e30091a8e33c3e87e47b47b7e57 SHA512 ac88d9d27cafc602b548d4605faaa37563b900ea0982df84fee4523cdd665629d6f0b0bea3d2c51a17ca8541d791f14d050cf083925daad452dec55be2b67661 WHIRLPOOL afd6081bff4c5a9cd103ad52083933ea7a012040e0e20a1630a58152a47d832f2ef6cee26babb846121975a17ee33422baf0a1d557df699edf1af6ffd94f5c94
 EBUILD twisted-conch-13.0.0.ebuild 980 SHA256 5980c6f8e1602582ccb0548a0d1653aff27cc484cebdaef6f676e8b011a75bd7 SHA512 2bbedeb2047bdc0515d2edd067c986477e6a3de8fca0613c4c06aa4bbe69cbd699983a1204af1783d92f3ec5e9e2e4ed149e8c38967cddfb0f4e2516dcc56e8e WHIRLPOOL 9e80e3b55b209096273418e563976266abff9404d2debde3f775b2413efa80eb42ae628058dd08d3b55c001549dad9d747167433d407215cf26f6d8061f1822d
 EBUILD twisted-conch-13.2.0.ebuild 909 SHA256 dbecdaf7826f92d758ab9d456c47dfc3b1d6b5b0aee327f335cdc76403cc843f SHA512 db7e47cf57a98dffc990cfd47e587c993d53bcb80094e228877db1f6dfbd7bf0b0bb77324017dc0f359768a301227dcf0eb76953d510008ff16dea844c3567d4 WHIRLPOOL 4bcd78a541090b7a3a11a6b247bb849639b29f01815ecf2209c69d39d31000dbe82b90835fe726c6755c33ea5e7414ff1ab359bbfa01d0fb14cb678d1f2bc943
-EBUILD twisted-conch-14.0.0.ebuild 909 SHA256 320639a3a3391e53a0b7f96fc1b6729d097b508a6e3f57fd03e9ee5d14258345 SHA512 aaf36a57f725f3d49db5f62328085e5f76aa1a241ede03f93b430def57a57de3fc88e9aa87d216d0f6fc3357a16d8635147d5ec2c393ba130b1b1c6f9a977e45 WHIRLPOOL 70be892693aa66fff45c83416c3203be7cc4887a6c2a0940b3674d00b194a6aca821a916db4f44ea3e524b9286bf7f216d8f8188967593f49dfdd8e0362adf12
-MISC ChangeLog 13636 SHA256 bc01c61fecd572eb62e9751e1beb0d711ff5f5c90ff4dd0672abdecb5c4d9730 SHA512 1008b992824434ba43fab94443cca66ec22548b368f547d7b6accf9b7af5d304a3edde9dc615628fda7ec063888ae710d1a5ffc4c832b90d1e6bd50567163fa1 WHIRLPOOL 56c054348e8ff3f5de69b8a930e2f48565bb36c067906688a6ca30a2fd1728ef5cfa33f96b71259dcff71078bf9589b81b8392baa33f03112214ab981d0acebf
+EBUILD twisted-conch-14.0.0.ebuild 898 SHA256 1b27cd34d0321cc044fb695fc9ea7ba1d0832fc38a6d15fb02fe08f90b3f55f7 SHA512 a0b05aa234441b45be27a63775879b1a43709a71341d8f1606ceecb510559abe1d01f181804d34459e95accf40070d70120929c109416cf25579d1049181104e WHIRLPOOL f57090d7a7681783d160b5af456525b4b296307642d8d57f624333ff662f8ed2abcd91d3c775d643d325de6e5293b93ce3357b8bfd52e4515fd590a9cf442294
+MISC ChangeLog 13793 SHA256 6557015accf0a8d4dd266c5062ddb31a42b8ba92342a3f568c0ead58366463ad SHA512 90a1fd5d091f2cfb4425d9499f5316089352c2acb2ddd46c5816077540d34d19b53cad1eae84261205bd1a530ff5faa5644e706c03f9a0881dd615e1d5295dbb WHIRLPOOL 46b8e07e2779dfaf1d090289e26fcfb9099ad6bfbe3e7cf2ef5cc32cc9b5f59dda16e52342b9ad7cee0ef2fedf10adc0a0c30cbc577f122af21177e1b7b154e1
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
