@@ -6,6 +6,6 @@ EBUILD twisted-mail-12.3.0.ebuild 853 SHA256 0e4f145ef5ebe1ac07fa67ac463f6448120
 EBUILD twisted-mail-13.0.0-r1.ebuild 745 SHA256 a9d7e76b3197826dc8d674f27e0dcaee3b95df8ab040e41659c4b25ef87e5168 SHA512 4ab385aec8f13dce81651720fbf11762bde0a9117a4df8f17a0992a88202ec47c0d885ab3a52a89e298694af4ffeccfce750b87976d7f68c651cf83faecd8dc9 WHIRLPOOL 905383c8d4325bf3fac3779c71e1c6b0db17c0d872870ad46d018f9017f50bbd531533629f71d4c9eb8dc56a7b8d263e0ec3a508c897317689ea0162d0045bff
 EBUILD twisted-mail-13.0.0.ebuild 864 SHA256 9163846eb7e9e1478c3c64717b9de6c32a87773f22d38dcd7d4b99a1a915dae2 SHA512 3be700fe216747f09aa6d2d2680d1a610d65bb096e13947b5851927cc921a2e0c8b66de4a435115bf3bc634e9b6eb752aaa4c1249f886c494f04d2f29d260477 WHIRLPOOL 086c3b052370b0ad103afa9adc1454adf2e2f5a6cc283b8467c18dd8bdff11d2b3c5a52e08ef8b24856cc0c9a43829b3da453d691b4392cceee1ec00a24969d3
 EBUILD twisted-mail-13.2.0.ebuild 743 SHA256 e624c7668443c0ab09868f40a4b30d8968f28ee81f392d2465819a9ebf5f70da SHA512 e02a501084662c59711acad1bb1dcf363e71bcdeb0b0cae62f4819d97bfe676f6ec7c7db89adbda716dd3cca39c125750e30dad6bb75a1d386c8e28afa8f005b WHIRLPOOL cf72a799aed4c2d90edafef04f6a9059172d22aa2a7e11bdf51f9f7d815e1ebb4610d3a7757d78e6efa3ed807a6dcb53ad32ba36b88be155f3d67b7efc4f24b7
-EBUILD twisted-mail-14.0.0.ebuild 743 SHA256 589039dc8118ca2baabf8717abb40442ab0d134ac3457db3b16f7a864f10ccac SHA512 2a2ef5609569bb4790f97519e1afc0f1dd81cd0d9a4b26af7fd571426cbe11e3abfea07449ab86e375776a0707927721c08d4909689bfc57f0bb1c390c5f13b0 WHIRLPOOL b088611bbfef7a23f7c691f9190a8818e4ec53522458151786b6fa379ef4c0405a61fea54eb0efadfcb3ec0fb1c03cb157dc8a6a05996fc39ca91c1ce4ce5c52
-MISC ChangeLog 11563 SHA256 b455792fa9464f2bef9877ca0f57d9b5664a31a8f55c0bccfa377f3a650f175e SHA512 6c3f58481fe9c776b9468ab482a2a51499047bac7cfae7f1f486709bc8060922463cf05d3d84aeb893058bb8eaf996bb9bdad5f4c055a8167d90c1862fd028fd WHIRLPOOL b904e5ac033155f05337272693542bf821de0f58999110a8b87971fc9584c7c0a9278ed337462393d7d565e4c94b1c60647cb07b5266a5a5c0d3745c282c169f
+EBUILD twisted-mail-14.0.0.ebuild 732 SHA256 537f97f2213ea81ebb79cc2419ccdbbe779b4a34b71f26d6d4d777c2c399ac0f SHA512 29b49e8f02a4dda348103c062729cd0af4d0c2685bacb8155a897e13d6a1bb3155665042f7db0c7b456c82a0adf217147a6de7edb4071ae49dd40a96e844d09c WHIRLPOOL c783be6f24321a7f27fedd0d55a2dfed5e852d5b616f022a280288b212de89714c59965929f85bbe7f76aaad5f5a0c4d9745509a400b99e961e68d76556b9948
+MISC ChangeLog 11719 SHA256 2cf3c932358297a0216304acb098c7a6f1ca08be50486a262ed1041d68b39ecd SHA512 3f3609b3dea2ddf435e8f8ca64535ea31e3c2d876c83c6673a15be186bce1fa7eb73d60e154a431acbd4b1c107e9326acbccc705d7bb41bae7c9a82d4717e71e WHIRLPOOL 8acdd78c0b26e01b4215736d51adb141247b90da08252b3b598f276d4507e7bf30e31788b9f94ee1aad2cbc56699f6d29a77fa3d9916977805103737bf58f480
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
