@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/twisted-mail
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-mail/ChangeLog,v 1.87 2014/05/20 07:04:43 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-mail/ChangeLog,v 1.88 2014/05/26 02:01:00 patrick Exp $
+
+  26 May 2014; Patrick Lauer <patrick@gentoo.org> twisted-mail-14.0.0.ebuild:
+  Temporarily drop arm and hppa keywords until twisted-core catches up again
 
 *twisted-mail-14.0.0 (20 May 2014)
 
